--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
+    namespace "com.capture400d"
     signingConfigs {
         config {
             storeFile file('/home/frederic/keystores/android.jks')
         }
     }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdk 33
     defaultConfig {
+        buildToolsVersion = "34.0.0"
         applicationId "com.capture400d"
         minSdkVersion 12
-        targetSdkVersion 12
-        versionName '1.1'
-        versionCode 2
+        targetSdkVersion 33
+        versionName '1.2'
+        versionCode 3
     }
     buildTypes {
         release {
@@ -26,8 +27,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:23.1.1'
+    implementation 'com.android.support:design:23.1.1'
 }
